# 4-Rosy-Complex-Poly

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: EigenTrait.hh  FrameField.cpp  FrameField.h  common.h
